# kautilya-hackathon

narrative-builder/: .env  DOCUMENTATION.md  README.md  config.py  data_loader.py  embedder.py  evaluation.py  llm_client.py  main.py  narrative_builder.py  narrative_engine.py  pyproject.toml  rag_graph.py  utils.py
narrative-builder/eval/: golden_set.jsonl
narrative-builder/templates/: index.html
narrative-builder/tests/: test_rag.py
semantic-search/: .env  README.md  chunker.py  config.py  data_loader.py  embedder.py  main.py  pyproject.toml  search.ipynb  semantic_search.py  test_build.py  vector_store.py
semantic-search/index/: chunks.pkl  faiss.index
semantic-search/index/cache/: query_cache.pkl
