[project]
name = "narrative-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy<2.0.0",
    "scikit-learn>=1.3.0",
    "ijson>=3.2.0",
    "faiss-gpu>=1.7.2",
    "torch>=2.0.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "dotenv>=0.9.9",
    "python-dotenv>=1.0.0",
    "flask>=3.1.2",
]
