[project]
name = "narrative-builder"
version = "0.1.0"
description = "RAG narrative builder over news articles using a local vLLM model (LangGraph), with RAGAS hallucination evaluation"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy<2.0.0",
    "scikit-learn>=1.3.0",
    "ijson>=3.2.0",
    "faiss-gpu>=1.7.2",
    "torch>=2.0.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "dotenv>=0.9.9",
    "python-dotenv>=1.0.0",
    "flask>=3.1.2",
    # RAG generation (LangGraph + vLLM) + evaluation (RAGAS).
    # Pinned to the langchain 0.3 generation: ragas's import of
    # langchain_community.chat_models.vertexai breaks on langchain 1.x / community 0.4+.
    "ragas>=0.2,<0.3",
    "langgraph>=0.2,<0.3",
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-openai>=0.2,<0.4",
    "langchain-huggingface>=0.1,<0.2",
    "datasets>=2.19.0",
]
