[project]
name = "semantic-search"
version = "0.1.0"
description = "Semantic search engine for Twitter API documentation using sentence transformers and FAISS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dotenv>=0.9.9",
    "faiss-gpu>=1.7.2",
    "numpy<2.0.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=5.1.2",
]
